--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 HELP.md
-###target/
+target/
 !.mvn/wrapper/maven-wrapper.jar
-###!**/src/main/**/target/
+!**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/main/**/target/classes
-!**/src/main/**/target/generated-sources
-!**/src/main/**/target/generated-test-sources
-!**/src/main/**/target/maven-archiver
-!**/src/main/**/target/maven-status
-!**/src/main/**/target/test-classes
 
 ### STS ###
 .apt_generated
